--- a/index.html
+++ b/index.html
@@ -5,46 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Árbol Genealógico Familia Asprón</title>
     <style>
-        /* Estilos para el video de fondo */
-        #video-container {
-            position: fixed;
+        /* Estilos básicos para el video de fondo */
+        #bg-video {
+            position: absolute;
             top: 0;
             left: 0;
-            width: 100vw;
-            height: 100vh;
-            overflow: hidden;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
             z-index: -1;
         }
 
-        #bg-video {
-            width: 100vw;
-            height: 100vh;
-            object-fit: cover;
+        /* Resto de estilos para la página */
+        body {
+            font-family: Arial, sans-serif;
+            color: white;
+            margin: 0;
+            padding: 0;
         }
 
-        /* Estilos para el contenido encima del video */
-        #content {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color: white;
-            font-size: 24px;
-            font-weight: bold;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+        h1 {
             text-align: center;
-            z-index: 1;
-        }
-
-        /* Botón para activar audio */
-        #unmute-btn {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            background-color: rgba(0, 0, 0, 0.7);
+            padding-top: 200px;
+            font-size: 48px;
             color: white;
-            border: none;
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-            border-
+        }
+    </style>
+</head>
+<body>
+
+    <!-- Video de fondo que se reproduce automáticamente -->
+    <video id="bg-video" autoplay muted loop>
+        <source src="https://github.com/Aaspron84/Familiaaspron.github.io/blob/main/video%20entrada%20aspron.mp4" type="video/mp4">
+        Tu navegador no soporta el video.
+    </video>
+
+    <!-- Título de la página -->
+    <h1>Árbol Genealógico Familia Asprón</h1>
+
+    <!-- Aquí puede ir el resto del contenido de la página -->
+
+</body>
+</html>
