--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <!-- Video de fondo que se reproduce automáticamente y con sonido -->
     <video id="bg-video" autoplay loop muted>
-        <source src="https://github.com/Aaspron84/Familiaaspron.github.io/raw/main/video%20entrada%20aspron.mp4" type="video/mp4">
+        <source src="https://github.com/Aaspron84/Familiaaspron.github.io/blob/main/video%20entrada%20aspron.mp4" type="video/mp4">
         Tu navegador no soporta el video.
     </video>
 
