--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             font-size: 48px;
             color: white;
             z-index: 1;  /* Asegura que esté por encima del video */
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);  /* Sombra para mejorar la visibilidad */
         }
 
         /* Estilos para el botón "ENTRAR" */
@@ -63,11 +64,8 @@
 </head>
 <body>
 
-    <!-- Video de fondo que se reproduce automáticamente y con sonido -->
-    <video id="bg-video" autoplay loop muted>
-        <source src="https://github.com/Aaspron84/Familiaaspron.github.io/blob/main/video%20entrada%20aspron.mp4" type="video/mp4">
-        Tu navegador no soporta el video.
-    </video>
+    <!-- Video de fondo con YouTube -->
+    <iframe id="bg-video" width="100%" height="100%" src="https://www.youtube.com/embed/XiXpjaJ6WS4?autoplay=1&mute=0&loop=1&playlist=XiXpjaJ6WS4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
     <!-- Título de la página -->
     <h1>Árbol Genealógico Familia Asprón</h1>
