--- a/index.html
+++ b/index.html
@@ -60,40 +60,20 @@
             font-size: 36px;
             margin-bottom: 20px;
         }
+
+        /* Texto de crédito en la esquina inferior derecha */
+        #credit {
+            position: fixed;
+            bottom: 10px;
+            right: 10px;
+            font-size: 12px;
+            color: white;
+            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
+            z-index: 3;
+        }
     </style>
 </head>
 <body>
 
     <!-- Video de fondo con YouTube -->
-    <iframe id="bg-video" width="100%" height="100%" src="https://www.youtube.com/embed/XiXpjaJ6WS4?autoplay=1&mute=1&loop=1&playlist=XiXpjaJ6WS4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
-    <!-- Título de la página -->
-    <h1>Árbol Genealógico Familia Asprón</h1>
-
-    <!-- Botón "ENTRAR" -->
-    <button id="enter-btn" onclick="entrar()">ENTRAR</button>
-
-    <!-- Estructura del árbol genealógico (ocultada inicialmente) -->
-    <div id="family-tree">
-        <h2>Árbol Genealógico Familia Asprón</h2>
-        <p>Este es el árbol genealógico de nuestra familia...</p>
-        <!-- Aquí iría la estructura jerárquica del árbol -->
-    </div>
-
-    <script>
-        // Función que oculta el video y muestra el árbol genealógico al hacer clic en el botón "ENTRAR"
-        function entrar() {
-            document.getElementById("bg-video").style.display = "none";  // Oculta el video
-            document.getElementById("enter-btn").style.display = "none"; // Oculta el botón "ENTRAR"
-            document.getElementById("family-tree").style.display = "block"; // Muestra el árbol genealógico
-        }
-
-        // Activar el sonido automáticamente al cargar la página (en algunos navegadores)
-        window.onload = function() {
-            var video = document.getElementById("bg-video");
-            video.muted = false;  // Desactiva el mute para activar el sonido
-        }
-    </script>
-
-</body>
-</html>
+    <iframe id="bg-video" width="100%" height="100%" src="https://www.youtube.com/embed/XiXpjaJ6WS4?autoplay=1&mute=1&
