--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
         /* Estilos básicos para el video de fondo */
         #bg-video {
             position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 80%;  /* Reducción del tamaño del video */
+            height: 80%;
             object-fit: cover;
             z-index: -1;
         }
@@ -19,13 +20,13 @@
         /* Estilos para el texto "Árbol Genealógico Familia Asprón" */
         h1 {
             position: absolute;
-            top: 10%;  /* Posicionamiento ajustado */
+            top: 10%;  /* Ajustado para que no tape el video */
             left: 50%;
             transform: translateX(-50%);
             font-size: 48px;
             color: white;
-            z-index: 1;  /* Asegura que esté por encima del video */
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);  /* Sombra para mejorar la visibilidad */
+            z-index: 1;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);  /* Sombra para mejor visibilidad */
         }
 
         /* Estilos para el botón "ENTRAR" */
@@ -36,16 +37,16 @@
             transform: translate(-50%, -50%);
             padding: 20px 40px;
             font-size: 24px;
-            background-color: rgba(0, 0, 0, 0.6);  /* Transparencia */
+            background-color: rgba(0, 0, 0, 0.6);
             color: white;
             border: none;
             cursor: pointer;
             border-radius: 10px;
-            z-index: 2; /* Asegura que esté por encima del video y el texto */
+            z-index: 2;
         }
 
         #enter-btn:hover {
-            background-color: rgba(0, 0, 0, 0.8);  /* Efecto hover */
+            background-color: rgba(0, 0, 0, 0.8);
         }
 
         /* Estructura del árbol genealógico (ocultada inicialmente) */
@@ -76,4 +77,41 @@
 <body>
 
     <!-- Video de fondo con YouTube -->
-    <iframe id="bg-video" width="100%" height="100%" src="https://www.youtube.com/embed/XiXpjaJ6WS4?autoplay=1&mute=1&
+    <iframe id="bg-video" width="100%" height="100%" src="https://www.youtube.com/embed/XiXpjaJ6WS4?autoplay=1&mute=1&loop=1&playlist=XiXpjaJ6WS4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+    <!-- Título de la página -->
+    <h1>Árbol Genealógico Familia Asprón</h1>
+
+    <!-- Botón "ENTRAR" -->
+    <button id="enter-btn" onclick="entrar()">ENTRAR</button>
+
+    <!-- Estructura del árbol genealógico (ocultada inicialmente) -->
+    <div id="family-tree">
+        <h2>Árbol Genealógico Familia Asprón</h2>
+        <p>Este es el árbol genealógico de nuestra familia...</p>
+        <!-- Aquí iría la estructura jerárquica del árbol -->
+    </div>
+
+    <!-- Crédito en la esquina inferior derecha -->
+    <div id="credit">
+        Creado por Antonio Asprón Vera
+    </div>
+
+    <script>
+        // Función para ocultar el video y mostrar el árbol genealógico al hacer clic en "ENTRAR"
+        function entrar() {
+            // Ocultar el video y el botón
+            document.getElementById("bg-video").style.display = "none";
+            document.getElementById("enter-btn").style.display = "none";
+
+            // Mostrar el árbol genealógico
+            document.getElementById("family-tree").style.display = "block";
+
+            // Activar el sonido del video
+            var video = document.getElementById("bg-video");
+            video.src = "https://www.youtube.com/embed/XiXpjaJ6WS4?autoplay=1&mute=0&loop=1&playlist=XiXpjaJ6WS4"; // Desactiva mute
+        }
+    </script>
+
+</body>
+</html>
