--- a/pagina-principal.html
+++ b/pagina-principal.html
@@ -47,7 +47,7 @@
     <h1>ESCUDO DE ARMAS FAMILIA ASPRÓN</h1>
 
     <!-- Imagen del escudo de armas de la familia -->
-    <img class="escudo" src="https://github.com/Aaspron84/Familiaaspron.github.io/blob/153132fb643f6e9d7b2412e1699e6ad32dc54b16/IMG_4367.JPG" alt="Escudo de Armas Familia Asprón">
+    <img class="escudo" src="https://github.com/Aaspron84/Familiaaspron.github.io/blob/main/IMG_4470.PNG" alt="Escudo de Armas Familia Asprón">
 
     <!-- Descripción de la familia -->
     <div class="descripcion">
