--- a/pagina-principal.html
+++ b/pagina-principal.html
@@ -46,12 +46,15 @@
 
     <h1>ESCUDO DE ARMAS FAMILIA ASPRÓN</h1>
 
-    <!-- Imagen del escudo de armas de la familia -->
-    <img class="escudo" src="https://github.com/Aaspron84/Familiaaspron.github.io/blob/main/IMG_4470.PNG" alt="Escudo de Armas Familia Asprón">
+    <!-- Imagen del escudo de armas de la familia -->  
+    <img class="escudo" src="https://raw.githubusercontent.com/Aaspron84/Familiaaspron.github.io/blob/main/IMG_4470.PNG" alt="Escudo de Armas Familia Asprón">
 
     <!-- Descripción de la familia -->
     <div class="descripcion">
-                <!-- Aquí pega todo el texto descriptivo de la familia Asprón --> La Casa de Asprón: Una Historia de Honor y Legado
+                <!-- Aquí pega todo el texto descriptivo de la familia Asprón --> 
+
+<h1 class="titulo">La Casa de Asprón: Una Historia de Honor y Legado</h1>
+<p class="descripcion">
 
 En los verdes valles de Asturias, donde las montañas besan el cielo y el mar Cantábrico susurra historias de antiguos linajes, nació en 1870 don Antonio Asprón Pilar, hijo de Manuel Asprón Rubio y Francisca Pilar, ambos españoles de pura cepa. La familia Asprón, cuyas raíces se hunden en la tierra asturiana, era conocida por su fortaleza y dedicación al trabajo, valores que forjaron el carácter de Antonio desde su más tierna infancia.
 
