--- a/pagina-principal.html
+++ b/pagina-principal.html
@@ -42,12 +42,12 @@
         }
     </style>
 </head>
-<body>
+<body>          
 
     <h1>ESCUDO DE ARMAS FAMILIA ASPRÓN</h1>
 
     <!-- Imagen del escudo de armas de la familia -->  
-    <img class="escudo" src="https://raw.githubusercontent.com/Aaspron84/Familiaaspron.github.io/blob/main/IMG_4470.PNG" alt="Escudo de Armas Familia Asprón">
+    <img class="escudo" src="https://raw.githubusercontent.com/Aaspron84/Familiaaspron.github.io/blob/fe07a45f8812ede18dda32ee666a6b9467a3dbc1/IMG_4470.PNG" alt="Escudo de Armas Familia Asprón">
 
     <!-- Descripción de la familia -->
     <div class="descripcion">
