--- a/pagina-principal.html
+++ b/pagina-principal.html
@@ -47,9 +47,7 @@
     <h1>ESCUDO DE ARMAS FAMILIA ASPRÓN</h1>
 
     <!-- Imagen del escudo de armas de la familia -->  
-    <img class="escudo" src="https://raw.githubusercontent.com/Aaspron84/Familiaaspron.github.io/blob/main/escudo.PNG" alt="Escudo de Armas Familia Asprón">
-
-
+    <img class="escudo" src="https://raw.githubusercontent.com/Aaspron84/Familiaaspron.github.io/blob/18a16fbaf4362624aafb616d8b1e4efba1b40ecf/escudo.PNG" alt="Escudo de Armas Familia Asprón">
 
     <!-- Descripción de la familia -->
     <div class="descripcion">
