--- a/pagina-principal.html
+++ b/pagina-principal.html
@@ -47,7 +47,7 @@
     <h1>ESCUDO DE ARMAS FAMILIA ASPRÓN</h1>
 
     <!-- Imagen del escudo de armas de la familia -->  
-    <img class="escudo" src="https://raw.githubusercontent.com/Aaspron84/Familiaaspron.github.io/blob/main/escudo.PNG?raw=true" alt="Escudo de Armas Familia Asprón">
+    <img class="escudo" src="https://drive.google.com/uc?export=view&id=1iZKU-jD8I0f_0QXNhgziseokACVsNJ9u" alt="Escudo de Armas Familia Asprón">
 
     <!-- Descripción de la familia -->
     <div class="descripcion">
