--- a/pagina-principal.html
+++ b/pagina-principal.html
@@ -47,7 +47,7 @@
     <h1>ESCUDO DE ARMAS FAMILIA ASPRÓN</h1>
 
     <!-- Imagen del escudo de armas de la familia -->  
-    <img class="escudo" src="https://imgur.com/rpqmvrm" alt="Escudo de Armas Familia Asprón">
+    <img class="escudo" src="https://i.imgur.com/rpqmvrm.jpg" alt="Escudo de Armas Familia Asprón">
 
     <!-- Descripción de la familia -->
     <div class="descripcion">
