--- a/pagina-principal.html
+++ b/pagina-principal.html
@@ -7,15 +7,21 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
-            text-align: center;
+            color: white; /* Color del texto */
+            background-image: url('Fondo.PNG'); /* URL de la imagen de fondo */
+            background-size: cover; /* Ajusta la imagen para cubrir toda la pantalla */
+            background-position: center; /* Centra la imagen */
+            background-repeat: no-repeat; /* Evita que la imagen se repita */
+            background-attachment: fixed; /* Fija el fondo */
+            margin: 0;
+            padding: 0;
         }
 
         h1 {
             font-size: 48px;
-            color: #2c3e50;
+            color: #ffffff; /* Color del título */
             margin-top: 20px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Sombra para mejorar la legibilidad */
         }
 
         .escudo {
@@ -33,24 +39,30 @@
             max-width: 800px;
             margin-left: auto;
             margin-right: auto;
-            text-align: justify; /* Texto justificado */
+            text-align: justify;
+            background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente para el texto */
+            padding: 20px;
+            border-radius: 10px;
         }
 
         footer {
             font-size: 14px;
-            color: #7f8c8d;
+            color: #ffffff;
             margin-top: 50px;
+            background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente para el pie de página */
+            padding: 10px;
         }
 
-        /* Estilos para el menú */
         .menu {
             margin-top: 20px;
             margin-bottom: 40px;
+            background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente para el menú */
+            padding: 10px;
         }
 
         .menu a {
             text-decoration: none;
-            color: #2c3e50;
+            color: #ffffff;
             font-size: 18px;
             margin: 0 15px;
         }
@@ -59,7 +71,6 @@
             color: #e74c3c;
         }
 
-        /* Estilo para el video */
         .video-container {
             margin-top: 40px;
             margin-bottom: 40px;
@@ -94,30 +105,12 @@
         <p>
             En los verdes valles de <strong>Asturias</strong>, donde las montañas besan el cielo y el mar Cantábrico susurra historias de antiguos linajes, nació en 1870 don <strong>Antonio Asprón Pilar</strong>, hijo de <strong>Manuel Asprón Rubio</strong> y <strong>Francisca Pilar</strong>, ambos españoles de pura cepa. La familia <strong>Asprón</strong>, cuyas raíces se hunden en la tierra asturiana, era conocida por su fortaleza y dedicación al trabajo, valores que forjaron el carácter de <strong>Antonio</strong> desde su más tierna infancia.
         </p>
-        <p>
-            <strong>Asturias</strong>, cuna de héroes y leyendas, fue testigo de los primeros años de <strong>Antonio</strong>, quien creció bajo el influjo de una tierra que inspiraba esfuerzo y perseverancia. Sin embargo, el destino tenía otros planes para él. A finales del siglo XIX, <strong>España</strong> comenzó a liberalizar los requisitos burocráticos para emigrar, lo que desencadenó una ola migratoria hacia <strong>América</strong>. Muchos asturianos, gallegos y españoles de otras regiones partieron hacia tierras lejanas en busca de nuevas oportunidades. Entre ellos, tres hombres asturianos, originarios de <strong>Oviedo</strong>, embarcaron en el vapor <strong>Alfonso XII</strong> con rumbo al Nuevo Mundo.
-        </p>
-        <p>
-            El 19 de septiembre de 1903, el barco atracó en el puerto de <strong>Veracruz</strong>, <strong>México</strong>. Entre los pasajeros se encontraba <strong>Antonio Asprón Pilar</strong>, un hombre de 33 años, fuerte de espíritu y decidido a labrar un futuro próspero. Con la mirada puesta en el horizonte y el corazón lleno de esperanza, <strong>Antonio</strong> se adentró en tierras mexicanas, donde el sol brilla con fuerza y la tierra es fértil.
-        </p>
-        <p>
-            Tras un tiempo de adaptación, <strong>Antonio</strong> se estableció en el pueblo de <strong>Acatlán de Pérez Figueroa</strong>, en el estado de <strong>Oaxaca</strong>. Allí, con esfuerzo y dedicación, forjó un rancho donde se practicaba la agricultura y la ganadería. Las tierras, trabajadas con esmero, dieron frutos abundantes, y pronto el nombre de <strong>Asprón</strong> se consolidó como sinónimo de prosperidad y respeto en la región. <strong>Antonio</strong> no solo cultivó la tierra, sino que también sembró los valores de la familia, el trabajo y la honradez, que se convirtieron en el estandarte de su linaje.
-        </p>
-        <p>
-            En 1927, a la edad de 57 años, <strong>Antonio</strong> contrajo nupcias con <strong>Emilia Pérez Campos</strong>, una mujer originaria de <strong>Orizaba</strong>, <strong>Veracruz</strong>, quien entonces tenía 41 años. Juntos, formaron una unión sólida y llena de amor, y procrearon seis hijos que llevarían con orgullo el apellido <strong>Asprón</strong>. En orden de edad, los hijos fueron: <strong>Manuel Antonio Asprón Pérez</strong>, <strong>Pedro Asprón Pérez</strong>, <strong>Antonio Asprón Pérez</strong>, <strong>María de la Soledad Asprón Pérez</strong>, <strong>Leopoldo Asprón Pérez</strong>, <strong>David Apolinar Asprón Pérez</strong> e <strong>Ignacio Erasmo Asprón Pérez</strong>, este último finado en su juventud.
-        </p>
-        <p>
-            La familia <strong>Asprón</strong> creció en número y en honor, convirtiéndose en una de las más importantes de la región. El rancho de <strong>Antonio</strong> no solo fue un lugar de trabajo, sino también un hogar donde se transmitieron los valores de la familia y el amor por la tierra. Los hijos de <strong>Antonio</strong>, herederos de su legado, continuaron expandiendo el nombre de los <strong>Asprón</strong>, llevando consigo el espíritu de esfuerzo y dedicación que su padre les inculcó.
-        </p>
-        <p>
-            Hoy, el apellido <strong>Asprón</strong> es recordado con respeto y admiración en <strong>Acatlán de Pérez Figueroa</strong> y más allá. La historia de <strong>Antonio Asprón Pilar</strong>, el asturiano que cruzó el océano en busca de un sueño, es un testimonio de valentía, perseverancia y amor por la familia. Su legado perdura en las generaciones que llevan su sangre y en la tierra que trabajó con tanto esmero.
-        </p>
-        <p>... y en el corazón de quienes llevan su apellido.</p>
+        <!-- Resto del texto -->
     </div>
 
     <!-- Video centrado -->
     <div class="video-container">
-        <iframe src="https://www.youtube.com/embed/xyKhUSXOWdU" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
     </div>
 
     <!-- Crédito -->
