--- a/pagina-principal.html
+++ b/pagina-principal.html
@@ -7,26 +7,19 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            color: white;
-            background-image: url('Fondo.PNG');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            margin: 0;
-            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+            text-align: center;
         }
 
         h1 {
-            font-size: 2.5rem;
-            color: #ffffff;
+            font-size: 48px;
+            color: #2c3e50;
             margin-top: 20px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
 
         .escudo {
-            width: 80%;
-            max-width: 300px;
+            width: 300px;
             height: auto;
             margin-top: 30px;
             border: 5px solid #2c3e50;
@@ -34,38 +27,31 @@
         }
 
         .descripcion {
-            font-size: 1rem;
+            font-size: 18px;
             margin-top: 40px;
             line-height: 1.6;
             max-width: 800px;
             margin-left: auto;
             margin-right: auto;
-            text-align: justify;
-            background-color: rgba(0, 0, 0, 0.5);
-            padding: 20px;
-            border-radius: 10px;
-            box-sizing: border-box;
+            text-align: justify; /* Texto justificado */
         }
 
         footer {
             font-size: 14px;
-            color: #ffffff;
+            color: #7f8c8d;
             margin-top: 50px;
-            background-color: rgba(0, 0, 0, 0.5);
-            padding: 10px;
         }
 
+        /* Estilos para el menú */
         .menu {
             margin-top: 20px;
             margin-bottom: 40px;
-            background-color: rgba(0, 0, 0, 0.5);
-            padding: 10px;
         }
 
         .menu a {
             text-decoration: none;
-            color: #ffffff;
-            font-size: 1.2rem;
+            color: #2c3e50;
+            font-size: 18px;
             margin: 0 15px;
         }
 
@@ -73,6 +59,7 @@
             color: #e74c3c;
         }
 
+        /* Estilo para el video */
         .video-container {
             margin-top: 40px;
             margin-bottom: 40px;
@@ -84,39 +71,6 @@
             border: none;
             border-radius: 10px;
         }
-
-        /* Estilos para móviles */
-        @media (max-width: 768px) {
-            h1 {
-                font-size: 2rem;
-            }
-
-            .escudo {
-                width: 100%;
-                border: none;
-            }
-
-            .descripcion {
-                padding: 10px;
-                font-size: 0.9rem;
-            }
-
-            .menu {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-            }
-
-            .menu a {
-                margin: 5px 0;
-                font-size: 1rem;
-            }
-
-            iframe {
-                width: 100%;
-                height: auto;
-            }
-        }
     </style>
 </head>
 <body>          
@@ -125,4 +79,51 @@
     <div class="menu">
         <a href="index.html">INTRO</a>
         <a href="#">HOME</a>
-        <a href="#">BLASÓN ASPRÓN
+        <a href="#">BLASÓN ASPRÓN</a>
+        <a href="#">ARBOL</a>
+    </div>
+
+    <h1>ESCUDO DE ARMAS FAMILIA ASPRÓN</h1>
+
+    <!-- Imagen del escudo de armas de la familia -->  
+    <img class="escudo" src="https://i.imgur.com/rpqmvrm.jpg" alt="Escudo de Armas Familia Asprón">
+
+    <!-- Descripción de la familia -->
+    <div class="descripcion">
+        <h1 class="titulo">La Casa de Asprón: Una Historia de Honor y Legado</h1>
+        <p>
+            En los verdes valles de <strong>Asturias</strong>, donde las montañas besan el cielo y el mar Cantábrico susurra historias de antiguos linajes, nació en 1870 don <strong>Antonio Asprón Pilar</strong>, hijo de <strong>Manuel Asprón Rubio</strong> y <strong>Francisca Pilar</strong>, ambos españoles de pura cepa. La familia <strong>Asprón</strong>, cuyas raíces se hunden en la tierra asturiana, era conocida por su fortaleza y dedicación al trabajo, valores que forjaron el carácter de <strong>Antonio</strong> desde su más tierna infancia.
+        </p>
+        <p>
+            <strong>Asturias</strong>, cuna de héroes y leyendas, fue testigo de los primeros años de <strong>Antonio</strong>, quien creció bajo el influjo de una tierra que inspiraba esfuerzo y perseverancia. Sin embargo, el destino tenía otros planes para él. A finales del siglo XIX, <strong>España</strong> comenzó a liberalizar los requisitos burocráticos para emigrar, lo que desencadenó una ola migratoria hacia <strong>América</strong>. Muchos asturianos, gallegos y españoles de otras regiones partieron hacia tierras lejanas en busca de nuevas oportunidades. Entre ellos, tres hombres asturianos, originarios de <strong>Oviedo</strong>, embarcaron en el vapor <strong>Alfonso XII</strong> con rumbo al Nuevo Mundo.
+        </p>
+        <p>
+            El 19 de septiembre de 1903, el barco atracó en el puerto de <strong>Veracruz</strong>, <strong>México</strong>. Entre los pasajeros se encontraba <strong>Antonio Asprón Pilar</strong>, un hombre de 33 años, fuerte de espíritu y decidido a labrar un futuro próspero. Con la mirada puesta en el horizonte y el corazón lleno de esperanza, <strong>Antonio</strong> se adentró en tierras mexicanas, donde el sol brilla con fuerza y la tierra es fértil.
+        </p>
+        <p>
+            Tras un tiempo de adaptación, <strong>Antonio</strong> se estableció en el pueblo de <strong>Acatlán de Pérez Figueroa</strong>, en el estado de <strong>Oaxaca</strong>. Allí, con esfuerzo y dedicación, forjó un rancho donde se practicaba la agricultura y la ganadería. Las tierras, trabajadas con esmero, dieron frutos abundantes, y pronto el nombre de <strong>Asprón</strong> se consolidó como sinónimo de prosperidad y respeto en la región. <strong>Antonio</strong> no solo cultivó la tierra, sino que también sembró los valores de la familia, el trabajo y la honradez, que se convirtieron en el estandarte de su linaje.
+        </p>
+        <p>
+            En 1927, a la edad de 57 años, <strong>Antonio</strong> contrajo nupcias con <strong>Emilia Pérez Campos</strong>, una mujer originaria de <strong>Orizaba</strong>, <strong>Veracruz</strong>, quien entonces tenía 41 años. Juntos, formaron una unión sólida y llena de amor, y procrearon seis hijos que llevarían con orgullo el apellido <strong>Asprón</strong>. En orden de edad, los hijos fueron: <strong>Manuel Antonio Asprón Pérez</strong>, <strong>Pedro Asprón Pérez</strong>, <strong>Antonio Asprón Pérez</strong>, <strong>María de la Soledad Asprón Pérez</strong>, <strong>Leopoldo Asprón Pérez</strong>, <strong>David Apolinar Asprón Pérez</strong> e <strong>Ignacio Erasmo Asprón Pérez</strong>, este último finado en su juventud.
+        </p>
+        <p>
+            La familia <strong>Asprón</strong> creció en número y en honor, convirtiéndose en una de las más importantes de la región. El rancho de <strong>Antonio</strong> no solo fue un lugar de trabajo, sino también un hogar donde se transmitieron los valores de la familia y el amor por la tierra. Los hijos de <strong>Antonio</strong>, herederos de su legado, continuaron expandiendo el nombre de los <strong>Asprón</strong>, llevando consigo el espíritu de esfuerzo y dedicación que su padre les inculcó.
+        </p>
+        <p>
+            Hoy, el apellido <strong>Asprón</strong> es recordado con respeto y admiración en <strong>Acatlán de Pérez Figueroa</strong> y más allá. La historia de <strong>Antonio Asprón Pilar</strong>, el asturiano que cruzó el océano en busca de un sueño, es un testimonio de valentía, perseverancia y amor por la familia. Su legado perdura en las generaciones que llevan su sangre y en la tierra que trabajó con tanto esmero.
+        </p>
+        <p>... y en el corazón de quienes llevan su apellido.</p>
+    </div>
+
+    <!-- Video centrado -->
+    <div class="video-container">
+        <iframe src="https://www.youtube.com/embed/xyKhUSXOWdU" allowfullscreen></iframe>
+    </div>
+
+    <!-- Crédito -->
+    <footer>
+        Creado por Antonio Asprón Vera
+    </footer>
+
+</body>
+</html>
