--- a/pagina-principal.html
+++ b/pagina-principal.html
@@ -80,7 +80,7 @@
         <a href="index.html">INTRO</a>
         <a href="#">HOME</a>
         <a href="#">BLASÓN ASPRÓN</a>
-        <a href="#">ARBOL</a>
+        <a href="arbol1.html">ARBOL</a>
     </div>
 
     <h1>ESCUDO DE ARMAS FAMILIA ASPRÓN</h1>
