--- a/pagina-principal.html
+++ b/pagina-principal.html
@@ -81,6 +81,7 @@
         <a href="#">HOME</a>
         <a href="#">BLASÓN ASPRÓN</a>
         <a href="arbol1.html">ARBOL</a>
+	<a href="#">HISTORIA DE ACATLAN</a>
     </div>
 
     <h1>ESCUDO DE ARMAS FAMILIA ASPRÓN</h1>
