--- a/arbol1.html
+++ b/arbol1.html
@@ -111,6 +111,11 @@
     <div class="container">
         <!-- Lateral izquierdo (menús) -->
         <div class="left-side">
+
+		<!-- Botón HOME -->
+		<div class="menu">
+   		 <a href="pagina-principal.html">HOME</a>
+		div>
             <!-- Menú con botones para enlazar a las páginas de los miembros -->
             <div class="menu">
                 <a href="pedro.html">PEDRO</a>
