--- a/pagina-principal.html
+++ b/pagina-principal.html
@@ -79,9 +79,9 @@
     <div class="menu">
         <a href="index.html">INTRO</a>
         <a href="#">HOME</a>
-        <a href="#">BLASÓN ASPRÓN</a>
+        <a href="blason.html">BLASÓN ASPRÓN</a>
         <a href="arbol1.html">ARBOL</a>
-	<a href="#">HISTORIA DE ACATLAN</a>
+	<a href="acatlan.html">HISTORIA DE ACATLAN</a>
     </div>
 
     <h1>ESCUDO DE ARMAS FAMILIA ASPRÓN</h1>
