--- a/arbol1.html
+++ b/arbol1.html
@@ -134,7 +134,7 @@
         <!-- Lateral derecho (imagen) -->
         <div class="right-side">
             <!-- Imagen del árbol genealógico en tamaño real -->
-            <img class="arbol-img" src="https://i.imgur.com/a/TecJmgV.jpg" alt="Árbol Genealógico Familia Asprón 1era Generación">
+            <img class="arbol-img" src="https://i.imgur.com/qjdkp51.png" alt="Árbol Genealógico Familia Asprón 1era Generación">
         </div>
     </div>
 
