--- a/pagina-principal.html
+++ b/pagina-principal.html
@@ -87,11 +87,11 @@
     <h1>ESCUDO DE ARMAS FAMILIA ASPRÓN</h1>
 
     <!-- Imagen del escudo de armas de la familia -->  
-    <img class="escudo" src="https://i.imgur.com/rpqmvrm.jpg" alt="Escudo de Armas Familia Asprón">
+    <img class="escudo" src="https://i.imgur.com/8guiuXi.png" alt="Un Asturiano llegando a México">
 
     <!-- Descripción de la familia -->
     <div class="descripcion">
-        <h1 class="titulo">La Casa de Asprón: Una Historia de Honor y Legado</h1>
+        <h1 class="titulo">Apellido Asprón: Una Historia de Honor y Legado</h1>
         <p>
             En los verdes valles de <strong>Asturias</strong>, donde las montañas besan el cielo y el mar Cantábrico susurra historias de antiguos linajes, nació en 1870 don <strong>Antonio Asprón Pilar</strong>, hijo de <strong>Manuel Asprón Rubio</strong> y <strong>Francisca Pilar</strong>, ambos españoles de pura cepa. La familia <strong>Asprón</strong>, cuyas raíces se hunden en la tierra asturiana, era conocida por su fortaleza y dedicación al trabajo, valores que forjaron el carácter de <strong>Antonio</strong> desde su más tierna infancia.
         </p>
